--------------------------------------------------------------
         Go4 Release Package v4.5.0 (build 40500)
                      01-Aug-2011
-------------------------------------------------------------
    The GSI Online Offline Object Oriented (Go4) Project
    Experiment Data Processing at EE department, GSI
------------------------------------------------------------
Authors: Joern Adamczewski-Musch      (1999-)
         Mohammad Al-Turany           (2000-2004)
         Denis Bertini                (2001-2004)
         Hans Georg Essel             (1999-2010)
         Marc Hemberger               (1999-2000)
         Sergey Linev                 (2002-)
---------------------------------------------------------------
Copyright (C) 2000- Gesellschaft f. Schwerionenforschung, GSI
                    Planckstr. 1, 64291 Darmstadt, Germany
Contact:            http://Go4.gsi.de
---------------------------------------------------------------
This software can be used under the license agreements as stated
in Go4License.txt file which is part of the distribution.
---------------------------------------------------------------

Changes in Go4 v4.5.0 (August 2011)
1. Fix problem with Ctrl-C handler. Now in batch in all cases
   analysis will be stopped correctly.
2. Significant changes in event classes. Reincarnation of TGo4CompositeEvent.
   It is now can be used again as output/input of any step. Many errors are fixed.
3. Add possibility to hide TGo4EventElement members from tree viewer and event
   viewer. This makes look of data structures, especially in composite events,
   much more clean. Default is off, can be changed via Settings->Preferences menu.
   Implemented for both qt3 and qt4 version.
4. Correctly display structure of composite event in the analysis browser.
5. Added composite event example in Go4ExampleAdvanced
6. Bugfix in help window display: Sometimes QProcess did not launch 
pdf viewer script correctly. Workaround: use detached QProcess
