@@ -75,6 +75,7 @@ TGo4MBSViewer::TGo4MBSViewer(QWidget *parent, const char* name) :
    fiLastServDataNum=0;
    fiLastEventNum=0;
    fiLastDataNum=0;
+   fxDeltaClock.start();
    connect( fxTimer, SIGNAL(timeout()), this, SLOT(Refresh()) );
    connect( fxMovieResetTimer, SIGNAL(timeout()), this, SLOT(ResetRunIcon()) );
    Display();
@@ -193,10 +194,25 @@ void TGo4MBSViewer::Refresh()
    fxRefTime=fxDaqStat.c_date;
    fbRunning=fxDaqStat.bh_acqui_running;
    int deltat=FrequencyBox->value();
+   int numperiods=1;
    if(fbIsMonitoring)
    {
       // only in monitoring mode: calculate rates ourselves, independent of mbs ratemter:
-      if(fiLastEventNum && deltat)
+	   // NEW: first check real time diff since last call and correct rates:
+	   int deltamilsecs=fxDeltaClock.elapsed();
+	   //cout <<"******* found ms:"<<deltamilsecs << endl;
+	   fxDeltaClock.restart();
+	   int deltasecs=deltamilsecs/1000;
+	   if(!fbTrendingInit && (deltasecs>=deltat*2))
+	   //if((deltasecs>=deltat*2)) // this one was for testing JAM
+		   {
+			   cout <<"Warning: MBS monitor found measuring interval:"<<deltasecs<<" s ("<<deltamilsecs <<" ms) exceeding timer period "<<deltat<<" s" << endl;
+			   cout <<" Maybe timer was skipped?" << endl;
+			   deltat=deltasecs;
+			   numperiods=(deltat/ (int) FrequencyBox->value());
+			   cout <<" Correcting number of measuring periods to:"<<numperiods << endl;
+		   }
+	  if(fiLastEventNum && deltat)
          fiCalcedEventRate=(fxDaqStat.bl_n_events-fiLastEventNum)/deltat;
       else
          fiCalcedEventRate=0;
@@ -296,7 +312,13 @@ void TGo4MBSViewer::Refresh()
    }
 
    if(fbTrending && !fbWarningState && fbIsMonitoring)
-      UpdateTrending();
+   	   {
+	   	   while((numperiods--) > 0)
+	   	   {
+	   		   UpdateTrending(); // use same values for all skipped periods
+	   		   //cout <<"Update trending with numperiods:"<<numperiods << endl;
+	   	   }
+   	   }
    StartMovieReset();
    Display();
    //f_ut_seg_show (&fxDaqStat,0,0,0);
