@@ -18,6 +18,7 @@
 #include "ui_TGo4MBSViewer.h"
 
 #include <QMovie>
+#include <QTime>
 
 #include "sys_def.h"
 #include "sbs_def.h"
@@ -135,6 +136,7 @@ protected:
     int fiCalcedServDataRate;
     int fiDataDelta;
     int fiServDataDelta;
+    QTime fxDeltaClock;
     QButtonGroup* StateGroup;
 
 
